Bug 1101130 Followup to add a missing #ifdef r=Bas